--- a/odonto/templates/forms/fp17_other_dental_services_form.html
+++ b/odonto/templates/forms/fp17_other_dental_services_form.html
@@ -1,6 +1,14 @@
 {% load forms %}
-{% checkbox field="Fp17OtherDentalServices.treatment_on_referral" %}
-{% checkbox field="Fp17OtherDentalServices.free_repair_or_replacement" %}
-{% checkbox field="Fp17OtherDentalServices.further_treatment_within_2_months" %}
-{% checkbox field="Fp17OtherDentalServices.domicillary_services" %}
-{% checkbox field="Fp17OtherDentalServices.sedation_services" %}
+<div class="row">
+  <div class="col-md-4">
+    {% checkbox field="Fp17OtherDentalServices.treatment_on_referral" style="vertical" %}
+    {% checkbox field="Fp17OtherDentalServices.free_repair_or_replacement" style="vertical" %}
+  </div>
+  <div class="col-md-4">
+    {% checkbox field="Fp17OtherDentalServices.further_treatment_within_2_months" style="vertical" %}
+    {% checkbox field="Fp17OtherDentalServices.domicillary_services" style="vertical" %}
+  </div>
+  <div class="col-md-4">
+    {% checkbox field="Fp17OtherDentalServices.sedation_services" style="vertical" %}
+  </div>
+</div>
