--- a/odonto/templates/forms/fp17_recall_form.html
+++ b/odonto/templates/forms/fp17_recall_form.html
@@ -1,2 +1,6 @@
 {% load forms %}
-{% input field="Fp17Recall.number_of_months" %}
+<div class="row">
+  <div class="col-sm-4">
+    {% input field="Fp17Recall.number_of_months" maxlength="2" %}
+  </div>
+</div>
