--- a/odonto/templates/forms/fp17nhsbsa_fields_form.html
+++ b/odonto/templates/forms/fp17nhsbsa_fields_form.html
@@ -2,3 +2,4 @@
 {% input field="Fp17NHSBSAFields.Fp17_NHSBSA_field_1" %}
 {% input field="Fp17NHSBSAFields.Fp17_NHSBSA_field_2" %}
 {% input field="Fp17NHSBSAFields.Fp17_NHSBSA_field_3" %}
+{% input field="Fp17NHSBSAFields.Fp17_NHSBSA_field_4" %}
