--- a/odonto/templates/forms/fp17nhsbsa_fields_form.html
+++ b/odonto/templates/forms/fp17nhsbsa_fields_form.html
@@ -1,5 +1,15 @@
 {% load forms %}
-{% input field="Fp17NHSBSAFields.Fp17_NHSBSA_field_1" %}
-{% input field="Fp17NHSBSAFields.Fp17_NHSBSA_field_2" %}
-{% input field="Fp17NHSBSAFields.Fp17_NHSBSA_field_3" %}
-{% input field="Fp17NHSBSAFields.Fp17_NHSBSA_field_4" %}
+<div class="row">
+  <div class="col-md-3">
+    {% input label="M" field="Fp17NHSBSAFields.Fp17_NHSBSA_field_1" %}
+  </div>
+  <div class="col-md-3">
+    {% input label="M" field="Fp17NHSBSAFields.Fp17_NHSBSA_field_2" %}
+  </div>
+  <div class="col-md-3">
+    {% input label="M" field="Fp17NHSBSAFields.Fp17_NHSBSA_field_3" %}
+  </div>
+  <div class="col-md-3">
+    {% input label="£" field="Fp17NHSBSAFields.Fp17_NHSBSA_field_4" %}
+  </div>
+</div>
