--- a/odonto/templates/forms/fp17_dental_care_provider_form.html
+++ b/odonto/templates/forms/fp17_dental_care_provider_form.html
@@ -1,6 +1,18 @@
 {% load forms %}
-{% input field="Fp17DentalCareProvider.provider_name" %}
-{% input field="Fp17DentalCareProvider.provider_location_number" %}
-{% input field="Fp17DentalCareProvider.provider_address" %}
-{% checkbox field="Fp17DentalCareProvider.performer_number_is_same_as_provider" %}
-{% input field="Fp17DentalCareProvider.performer_number" %}
+<div class="row">
+  <div class="col-md-6">
+    {% input field="Fp17DentalCareProvider.provider_name" style="vertical" %}
+  </div>
+  <div class="col-md-5 col-md-offset-1">
+    {% input field="Fp17DentalCareProvider.provider_location_number" style="vertical" %}
+  </div>
+</div>
+{% input field="Fp17DentalCareProvider.provider_address" style="vertical" %}
+<div class="row">
+  <div class="col-md-6">
+    {% checkbox field="Fp17DentalCareProvider.performer_number_is_same_as_provider" style="vertical" %}
+  </div>
+  <div class="col-md-5 col-md-offset-1">
+    {% input field="Fp17DentalCareProvider.performer_number" style="vertical" %}
+  </div>
+</div>
