--- a/odonto/templates/forms/fp17_incomplete_treatment_form.html
+++ b/odonto/templates/forms/fp17_incomplete_treatment_form.html
@@ -2,15 +2,23 @@
 <div class="row">
   <div class="col-md-4">
     Banding of the ACTUAL treatment provided:
-    {% checkbox label="Band 1" field="Fp17IncompleteTreatment.incomplete_treatment_band_1" style="vertical" %}
-    {% checkbox label="Band 2" field="Fp17IncompleteTreatment.incomplete_treatment_band_2" style="vertical" %}
-    {% checkbox label="Band 3" field="Fp17IncompleteTreatment.incomplete_treatment_band_3" style="vertical" %}
+    <div class="row">
+      <div class="col-md-4">
+        {% checkbox label="Band 1" field="Fp17IncompleteTreatment.incomplete_treatment_band_1" style="vertical" %}
+      </div>
+      <div class="col-md-4">
+        {% checkbox label="Band 2" field="Fp17IncompleteTreatment.incomplete_treatment_band_2" style="vertical" %}
+      </div>
+      <div class="col-md-4">
+        {% checkbox label="Band 3" field="Fp17IncompleteTreatment.incomplete_treatment_band_3" style="vertical" %}
+      </div>
+    </div>
   </div>
-  <div class="col-md-4">
-    {% datepicker field="Fp17IncompleteTreatment.date_of_acceptance" %}
+  <div class="col-md-3">
+    {% datepicker field="Fp17IncompleteTreatment.date_of_acceptance" style="vertical" %}
     {% checkbox field="Fp17IncompleteTreatment.completion_same_as_acceptance_date" style="vertical" %}
   </div>
-  <div class="col-md-4">
-    {% datepicker field="Fp17IncompleteTreatment.completion_or_last_visit" %}
+  <div class="col-md-3 col-md-offset-1">
+    {% datepicker field="Fp17IncompleteTreatment.completion_or_last_visit" style="vertical" %}
   </div>
 </div>
