--- a/odonto/templates/patient_detail.html
+++ b/odonto/templates/patient_detail.html
@@ -1,5 +1,6 @@
 {% load panels %}
 {% load forms %}
+{% load links %}
 <div ng-show="patient == null" class="container-fluid content-offset">
   <h1 class="text-center content-offset">
     Patient not found
@@ -24,6 +25,9 @@
             [[ patient.demographics[0].hospital_number ]]
             {% endblock %}
           </small>
+          <span class="pull-right">
+            {% link_to "Start new treatment course" pathways.Fp17Pathway ngpatient="patient.id" %}
+          </span>
         </h1>
       </div>
 
