--- a/odonto/templates/templatetags/links/link_to.html
+++ b/odonto/templates/templatetags/links/link_to.html
@@ -1,3 +1,5 @@
-<a href="{{ href }}">
+{% load forms %}
+<a href="{{ href }}" {% if classes %}class="{{ classes }}" {% endif %}>
+  {% if iconname %}{% icon iconname %}{% endif %}
   {{ link_text }}
 </a>
