Prettify records, detail page, model display names

--- a/odonto/templates/records/fp17_incomplete_treatment.html
+++ b/odonto/templates/records/fp17_incomplete_treatment.html
@@ -11,14 +11,10 @@
    <br />
 </span>
 <span ng-show="item.date_of_acceptance">
-    [[ item.date_of_acceptance | shortDate ]]
-   <br />
-</span>
-<span ng-show="item.completion_same_as_acceptance_date">
-     Completion Same As Acceptance Date
+  Date of Acceptance: [[ item.date_of_acceptance | shortDate ]]
    <br />
 </span>
 <span ng-show="item.completion_or_last_visit">
-    [[ item.completion_or_last_visit | shortDate ]]
+  Date of Completion: [[ item.completion_or_last_visit | shortDate ]]
    <br />
 </span>
