--- a/odonto/templates/records/fp17_clinical_data_set.html
+++ b/odonto/templates/records/fp17_clinical_data_set.html
@@ -7,10 +7,11 @@
    <br />
 </span>
 <span ng-show="item.fissure_sealants">
-    [[ item.fissure_sealants ]]
+  Fissure sealants: [[ item.fissure_sealants ]]
    <br />
 </span>
 <span ng-show="item.radiographs_taken">
+  Radiographs taken:
     [[ item.radiographs_taken ]]
    <br />
 </span>
@@ -19,46 +20,57 @@
    <br />
 </span>
 <span ng-show="item.permanent_fillings_and_sealant_restorations">
+  Permanent fillings and Sealant Restorations:
     [[ item.permanent_fillings_and_sealant_restorations ]]
    <br />
 </span>
 <span ng-show="item.extractions">
+  Extractions:
     [[ item.extractions ]]
    <br />
 </span>
 <span ng-show="item.crowns_provided">
+  Crowns provided:
     [[ item.crowns_provided ]]
    <br />
 </span>
 <span ng-show="item.upper_denture_acrylic">
+  Upper denture acrylic:
     [[ item.upper_denture_acrylic ]]
    <br />
 </span>
 <span ng-show="item.lower_denture_acrylic">
+  Lower denture acrylic:
     [[ item.lower_denture_acrylic ]]
    <br />
 </span>
 <span ng-show="item.upper_denture_metal">
+  Upper denture metal:
     [[ item.upper_denture_metal ]]
    <br />
 </span>
 <span ng-show="item.lower_denture_metal">
+  Lower denture metal:
     [[ item.lower_denture_metal ]]
    <br />
 </span>
 <span ng-show="item.veneers_applied">
+  Veneers applied:
     [[ item.veneers_applied ]]
    <br />
 </span>
 <span ng-show="item.inlays">
+  Inlays:
     [[ item.inlays ]]
    <br />
 </span>
 <span ng-show="item.bridges_fitted">
+  Bridges fitted:
     [[ item.bridges_fitted ]]
    <br />
 </span>
 <span ng-show="item.referral_for_advanced_mandatory_services_band">
+  Referral fora advanced mandatory services band:
     [[ item.referral_for_advanced_mandatory_services_band ]]
    <br />
 </span>
@@ -67,6 +79,7 @@
    <br />
 </span>
 <span ng-show="item.antibiotic_items_prescribed">
+  Antibiotic items prescribed:
     [[ item.antibiotic_items_prescribed ]]
    <br />
 </span>
@@ -79,26 +92,32 @@
    <br />
 </span>
 <span ng-show="item.decayed_teeth_permanent">
+  Decayed teeth permanent:
     [[ item.decayed_teeth_permanent ]]
    <br />
 </span>
 <span ng-show="item.decayed_teeth_deciduous">
+  Decayed teeth deciduous:
     [[ item.decayed_teeth_deciduous ]]
    <br />
 </span>
 <span ng-show="item.missing_teeth_permanent">
+  Missing teeth permanent:
     [[ item.missing_teeth_permanent ]]
    <br />
 </span>
 <span ng-show="item.missing_teeth_deciduous">
+  Missing teeth deciduous:
     [[ item.missing_teeth_deciduous ]]
    <br />
 </span>
 <span ng-show="item.filled_teeth_permanent">
+  Filled teeth permanent:
     [[ item.filled_teeth_permanent ]]
    <br />
 </span>
 <span ng-show="item.filled_teeth_deciduous">
+  Filled teeth deciduous:
     [[ item.filled_teeth_deciduous ]]
    <br />
 </span>
