--- a/odonto/templates/records/fp17_dental_care_provider.html
+++ b/odonto/templates/records/fp17_dental_care_provider.html
@@ -1,20 +1,12 @@
 <span ng-show="item.provider_name">
-    [[ item.provider_name ]]
+  Provider: [[ item.provider_name ]]
    <br />
 </span>
 <span ng-show="item.provider_location_number">
-    [[ item.provider_location_number ]]
-   <br />
-</span>
-<span ng-show="item.provider_address">
-    [[ item.provider_address ]]
-   <br />
-</span>
-<span ng-show="item.performer_number_is_same_as_provider">
-     Performer Number Is Same As Provider
+  Provider number: [[ item.provider_location_number ]]
    <br />
 </span>
 <span ng-show="item.performer_number">
-    [[ item.performer_number ]]
+  Performer number: [[ item.performer_number ]]
    <br />
 </span>
