Make Recall form actually editable b/c layout

--- a/odonto/templates/records/fp17_recall.html
+++ b/odonto/templates/records/fp17_recall.html
@@ -1,4 +1,3 @@
 <span ng-show="item.number_of_months">
-    [[ item.number_of_months ]]
-   <br />
+  Recall in [[ item.number_of_months ]] months
 </span>
