--- a/odonto/templates/forms/fp17_recall_form.html
+++ b/odonto/templates/forms/fp17_recall_form.html
@@ -1,9 +1,7 @@
 {% load forms %}
-<div class="row">
-  <div class="col-md-7">
-    <p>I have given preventative advice and recommended a recall interval, taking into account NICE guidance, that I regard as appropriate to the patient’s current oral health.</p>
-  </div>
-  <div class="col-md-5">
-    {% input label="Recall interval" field="Fp17Recall.number_of_months" maxlength="2" unit="months" %}
-  </div>
-</div>
+<p>
+  I have given preventative advice and recommended a recall interval, taking
+  into account NICE guidance, that I regard as appropriate to the patient’s
+  current oral health.
+</p>
+{% input label="Recall interval" field="Fp17Recall.number_of_months" maxlength="2" unit="months" %}
