--- a/odontotheme/templates/opal.html
+++ b/odontotheme/templates/opal.html
@@ -4,7 +4,7 @@
 {% block navbar %}{% include 'navbar.html' %}{% endblock %}
 
 {% block content %}
-<div class="row">
+<div class="row odonto-menu">
   <div class="col-md-2" id="side-nav">
   <ul class="app-info">
     <li>
