--- a/odontotheme/static/css/odonto.css
+++ b/odontotheme/static/css/odonto.css
@@ -22,6 +22,10 @@ h2 {
 .btn-default small{
   color: #DDD;
 }
+.navbar .container-fluid .navbar-brand {
+    margin-left: -32px;
+}
+
 .navbar-default a.navbar-brand {
     color: white;
 }
@@ -222,7 +226,7 @@ label{
   padding-bottom: 30px;
 }
 .app-info li {
-  padding-left: 20px;
+  padding-left: 32px;
   color: white;
 }
 #side-nav ul.nav li i {
