--- a/odontotheme/templates/navbar.html
+++ b/odontotheme/templates/navbar.html
@@ -7,13 +7,6 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-
       <a class="navbar-brand" href="/#/">
         <img src="{% static 'img/odonto_logo.png' %}" />
         {{ OPAL_BRAND_NAME }}
@@ -27,6 +20,7 @@
       	<li>
           <a href="{% url 'logout' %}" title="Log out">
             <i class="fa fa-sign-out"></i>
+            {{ request.usr }}
           </a>
         </li>
         {% if request.user.is_superuser %}
