Add some 'do something' text to the home page

--- a/odontotheme/templates/welcome.html
+++ b/odontotheme/templates/welcome.html
@@ -6,6 +6,7 @@
         <img src="{% static 'img/odonto_logo.png' %}" />
       </p>
       <p>
+        Search for a patient to find their FP17 record
       </p>
     </center>
   </div>
