Add address fields to demographics

--- a/odonto/templates/forms/demographics_form.html
+++ b/odonto/templates/forms/demographics_form.html
@@ -4,3 +4,8 @@
 {% input field="Demographics.surname" %}
 {% date_of_birth_field %}
 {% select field="Demographics.sex" %}
+{% input field="Demographics.house_number_or_name" %}
+{% input field="Demographics.street" %}
+{% input field="Demographics.city_or_town" %}
+{% input field="Demographics.county" %}
+{% input field="Demographics.post_code" %}
