Don't display ethinicity on the detail page

--- a/odonto/templates/patient_detail.html
+++ b/odonto/templates/patient_detail.html
@@ -47,12 +47,7 @@
             Sex: <b>[[ patient.demographics[0].sex ]]</b>
           </p>
         </div>
-        <div class="col-md-4">
-          <p>
-            Ethnicity: <b>[[ patient.demographics[0].ethnicity ]]</b>
-          </p>
-        </div>
-        <div class="col-md-1">
+        <div class="col-md-1 col-md-offset-4">
           <i class="fa fa-pencil edit pull-right"
              ng-click="patient.recordEditor.editItem('demographics', 0)"></i>
         </div>
